# AAut-projects

./: fitting3.py  git_cheat_sheet  project1.py  rbfscores.py
project 1/: RBFlineareg.py  RBFlr.py  SVRlineareg.py  best_model.pkl  best_model_final.pkl  classes.py  cv_results.csv  cv_results_final.csv  data_visualization.py  ex1.py  feature_analysis.py  hyperparameter_tuning.py  imports_data.py  mymodel.py  number_of_centroids.py  our_best_model.pkl  project1.py  rbfscores.py  test.py  test_overfit.py  tools.py
project 2/: Keras.py  MLP.py  MLP_COMP_FT.py  MLP_V2.py  MLP_comp_FT.py  NN.py  classes.py  data_imports.ipynb  data_imports.py  data_inspection.py  feature_transform.pkl  final_model.pkl  fits.py  fits_mena.py  imports.py  keras_tune.py  load.ipynb  load.py  mlp_model.h5  mlp_pipeline.joblib  mlpopt.joblib  mymodel.py  nested_optuna.py  optuna_tuning.py  optuna_tuning_sbm.py  preproc.pkl  scaler_skel.pkl  study.py  svm_rbf_pipeline.joblib  svm_rbfopt.joblib  xgb_pipeline.joblib  xgbopt.joblib
project 2/models/: svm_rbf_pipeline_fold1.joblib  svm_rbf_pipeline_fold10.joblib  svm_rbf_pipeline_fold11.joblib  svm_rbf_pipeline_fold12.joblib  (+10 more)
project_3/: CatBoost.py  MLP.py  MLP_merged_feat_arr_recovered.py  PLS.py  classes.py  classes_recv.py  data_inspection3.py  final_model.pkl  fitting3.py  imports3.py  myMLtools.py  myMLtools.rar  mymodel.py  test.py  validate_test_code.py
project_3/myMLtools/: README.md  pyproject.toml
project_3/myMLtools/myMLtools/: __init__.py  tools.py
project_3/myMLtools/myMLtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+54 files in other folders)
