[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myMLtools"
version = "0.1.0"
description = "Shared plotting, EDA, and ML utilities for aaut projects"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }  # change if needed
authors = [{ name = "Your Name" }]

# Core dependencies used in your file
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "plotly>=5.18",
  "scikit-learn>=1.3",
  "umap-learn>=0.5.3",
  "scipy>=1.10",
  "catboost>=1.2",
  "scikit-optimize>=0.9.0",
  "joblib>=1.3"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aaut_tools*"]

# Optional: extras if you want to split heavy viz deps later
# [project.optional-dependencies]
# viz = ["plotly>=5.18", "seaborn>=0.12", "matplotlib>=3.7"]
# ml  = ["scikit-learn>=1.3", "umap-learn>=0.5.3", "catboost>=1.2", "scikit-optimize>=0.9.0"]
